speed enhancements + switch to jetty